# hacks

./: README
BLP/: doing_further_checks_with_an_elif.sh  using_the_if_command.sh
BLP/chap14(sig_shm_msg)/: Makefile  msg_recv.c  msg_send.c  readme  sem1.c  semun.h  shm_com.h  shm_recv.c  shm_send.c
BLP/chap15(socket)/: Makefile  client1.c  client2.c  client3.c  getdate.c  getdate.c~  getdate_udp.c  gethostname.c  readme  select.c  server1.c  server2.c  server3.c  server4.c  server5.c
BLP/chap2(script)/: creating_a_script.sh
BLP/chap3(file_directory)/: Makefile  copy_block.c  copy_stdio.c  mmap.c  printdir1.c  printdir2.c  simple_open.c  simple_read.c  simple_write.c
BLP/chap4(Environment)/: Makefile  argopt.c  args.c  ctime.c  environ.c  envtime.c  gmtime.c  hostget.c  limits.c  logmask.c  showenv.c  strftime.c  syslog.c  tmpnam.c  user.c
BLP/chap5(Terminals)/: Makefile  menu1.c  menu2.c  menu3.c  password.c  sizeterm.c
BLP/chap7(malloc_filelock_db)/: Makefile  memory1.c  memory2.c  memory3.c  memory4.c  memory5a.c  memory5b.c  memory6.c  readme
MIT-OCW/A Gentle Introduction to Programming Using Python (Jan IAP 2008)/: address
MIT-OCW/A Gentle Introduction to Programming Using Python (Jan IAP 2011)/: address
Tools/: ConvertTxt2Csv.cpp  auto_ssh.sh  restart.sh  shutdownalllinux.sh
Tools/ConvertAS2CSV/: ConvertAS2CSV.sln  ConvertAS2CSV.vcproj  Makefile  clearProjTemp.bat
Tools/auto-restart-ecServer/: detail.sh  killall.sh  xxxxx.sh
XMLReader/: Makefile  PARSER.cpp  PARSER.h  README  XMLReader.cpp  converType.cpp  converType.h  main.cpp  xml_parser.cpp  xml_parser.h
XMLReader/xml/: resource_struct3.xml
auto_build_protocol/: README  autoprotocol.sh  rpc.xml
auto_build_protocol/autoproto/: Makefile  autoprotocol.cc  autoprotocol.h
callback_test/1/: CCAcceptedKey.h  CCKeyManager.cpp  CCKeyManager.h  CCKeyMap.h  CCTestKeyEvent.cpp  CCTestKeyEvent.h  CCUtils.cpp  CCUtils.h  Makefile
callback_test/2/: CCKeyManager.cpp  CCKeyManager.h  CCKeyMap.h  Makefile  main.cpp
cplusplus/: CPlusPlus
cplusplus/IO/: CMakeLists.txt  Example01.cpp  Example02.cpp  Example03.cpp  Example04.cpp  Example05.cpp
cplusplus/classes/: Example01.cpp  Example02.cpp  (+18 more)
cplusplus/stl/: CMakeLists.txt  Example01.cpp  Example02.cpp  Example03.cpp  Example04.cpp  Example05.cpp  Example06.cpp  Example07.cpp  Example08.cpp  Example09.cpp  Example10.cpp  Example11.cpp  Example12.cpp  Example13.cpp  Example14.cpp  Example15.cpp  Example16.cpp  Example17.cpp  Example18.cpp  Example19.cpp  Makefile  STL
curl_test/: CMakeLists.txt  Makefile  README  SConstruct  download_file.cc  upload_file.cc
curl_test/ftp_upfile_and_download/: Makefile  fud.cc  fud.h  main.cc
curl_test/multicurl/: AtomicT.h  Buf.h  Makefile  MapT.hpp  Mutex.h  PoolT.h  QueueT.h  Single.cpp  Single.h  Singleton.h  Uncopyable.h  main.cc  net_curl.cc  net_curl.h  netdef.h  task_curl.cc  task_curl.h
debug_function/: CCDebug.h  Makefile  main.cc
editor-config/: .emacs  .vimrc
fg_server/: DataSheet.xml  DataSheet1.xml  ExcelData.cpp  ExcelData.h  Makefile  Player.txt  Sheet.cpp  Sheet.h  SheetBase.cpp  SheetBase.h  T.cpp  TODO  Test.cpp  Test.txt  Test2.txt  Tools.cpp  build  build_tools
fileUpdater/: INFO.xml  Makefile  build  client.cc  create  createUpdateXML.cc  createupdatexml.cc  curl_down.cc  curl_down.h  downloadfile.cc  info.xml  make  md5_calc.cc  md5_calc.h  read_dir.cpp  scan_files  scanfiles.sh  server.cc  tags  text.xml  update.xml  utils.cc  utils.h  version_config.xml
krc/: tcpl_chapter3.doc
libev_test/: build  client.c  client2.cc  ev_server.cc  ev_server.h  noblock_connect_for_client.c  server1.c  utils.c  utils.h
md5/: CMD5Checksum.h  MD5ChecksumDefines.cpp  MD5ChecksumDefines.h  build  test.cpp
memcached_test_with_c/: CMemcached.hpp  Main.cc  README  build
mongodb_test/: SConstruct  connect_db_test.cc  delete_data_test.cc  insert_data_test.cc  readme  select_data_test.cc  update_data_test.cc
protobuf_test/: Makefile  RpcManager.cpp  RpcManager.h  ServerRpc.cpp  ServerRpc.h  client.cpp  global_functions.h  netdef.h  server.cpp  tags
python_script/: uploadfile.py
resource_reader/: Makefile  main.cpp  resource_struct.xml  xml_parser.cpp  xml_parser.h
server/chatServer/: CMakeLists.txt  Makefile  define.h  handler.cpp  handler.h  list.h  main.cpp  packet.h  socket.cpp  socket.h  utils.cpp  utils.h
server/select_epoll_server/: CMakeLists.txt  Makefile  client.c  epollServer.c  selectServer.c  utils.c  utils.h
sqlite_test/: Makefile  README  insert_db.c  select_db.cc
ssl_test/: CMakeLists.txt  Makefile  README  SConstruct  certificate.pem  client.cc  privatekey.pem  server.cc  utils.cc  utils.h
syscall/: Daemon.c
tinyxml_test/: CMakeLists.txt  Makefile  SConstruct  main.cpp
updateServer/: AtomicT.h  AuthTask.cpp  Buf.h  CMakeLists.txt  Config.cpp  Config.h  Evloop.cpp  Makefile  Makefile1  Makefile2  PROTOCOLS  PoolT.h  ProcessManager.cpp  ProcessManager.h  SQL.h  SendTask.h  Single.cpp  Single.h  Sock.c  Sock.h  ThreadPool.cpp  ThreadPool.h  build  config.lua  database.cpp  database.h  main.cpp  protocol.h  tags  task.h  test_client.cpp
updateServer/auth/: Makefile  authServer.c  client.c  sock.c  sock.h
updateServer/content/: client.cpp  client.h  userlist.cpp  userlist.h
updateServer/handler/: HandleMessage.cpp  HandleUpdater.cpp  MSGHANDLE
updateServer/protocol/: updatecontent.pb.cc  updatecontent.pb.h  updatecontent.proto  version.pb.h  version.proto
updateServer/sh/: detail.sh
updateServer/test/: Buf_unittest.cc  Makefile  PoolT_unittest.cc  database_unittest.cc  libev_unittest.cc  sendpic.cpp  student.cpp  teacher.cpp  test.cpp  test_list.cpp  test_map.cpp  tst_GetCourseDBCount.cpp  white.cpp
updateServer/xmlfileUpdater/: Makefile  createupdatexml.cc  downloadfile.cc  readdir.cpp  scanfiles.sh  utils.cc  utils.h
updateServer/xmlfileUpdater/protocol/: updater.proto
updateServer/xmlfileUpdater/v1.1/: file2
updateServer/xmlfileUpdater/v1.2/: file4
updateServer/xmlfileUpdater/v1.5/: file0  file2
updateServer/xmlfileUpdater/xml/: README
(+367 files in other folders)
